# cansina

./: .gitignore  .python-version  .replit  .travis.yml  CHANGELOG.md  Default.htm  README.md  bcolors.py  cansina.py  dbo.py  folder.txt  folders.py  index.html  inspector.py  noname.py  params.json  payload.py  payload0.txt  payload1.txt  payload_test.txt  printer.py  pyproject.toml  requirements.txt  setup.py  task.py  tc_robots.txt  test.py  test.txt  viewer.py  visitador.py  visitor.py
cansina/: cansina.py  main.py
cansina/core/: dbmanager.py  payload.py  printer.py  viewer.py  visitor.py
cansina/plugins/: crawler.py  robots.py
cansina/utils/: viewer.py
core/: dbmanager.py  inspector.py  payload.py  printer.py  resumer.py  task.py  viewer.py  visitor.py
dirbuster/: apache-user-enum-2.0.txt
fuzzdb/.svn/: all-wcprops  entries
fuzzdb/Discovery/.svn/: all-wcprops  entries
fuzzdb/Discovery/FilenameBruteforce/.svn/: all-wcprops  entries
fuzzdb/Discovery/PredictableRes/.svn/: all-wcprops  entries
fuzzdb/attack-payloads/.svn/: all-wcprops  entries
fuzzdb/attack-payloads/BizLogic/.svn/: all-wcprops  entries
fuzzdb/attack-payloads/all-attacks/.svn/: all-wcprops  entries
fuzzdb/docs/.svn/: all-wcprops  entries
fuzzdb/docs/misc/.svn/: all-wcprops  (+1 more)
fuzzdb/regex/.svn/: all-wcprops  entries
fuzzdb/web-backdoors/.svn/: all-wcprops  entries
fuzzdb/wordlists-misc/.svn/: all-wcprops  entries
fuzzdb/wordlists-user-passwd/.svn/: all-wcprops  entries
plugins/: crawler.py  inspector.py  linkextractor.py  robots.py
utils/: crawler.py  misc.py  viewer.py
(+298 files in other folders)
